2004-06-07  ------ omnetpp-3.0a5 released ------

2004-05-15  ------ omnetpp-3.0a4 released ------

2004-03-22  ------ omnetpp-3.0a3 released ------

2004-03-03  ------ omnetpp-3.0a2 released ------

FIXME todo: print event banner when simulation stops (esp with express mode),
otherwise one doesn't know total duration and number of processed events!

2004-02-23  Andras Varga 

	* cmdenv.cc: new omnetpp.ini option:
	    event-banner-details= true/false (default: false).
	It is in effect with normal mode (express-mode=false), and causes
        elapsed time and number of messages (created,present, in FES) to be 
        printed in a second line below the event banner. Format:
           Elapsed: 131s (2m 11s)   Clock: 131830   Messages: created: 45  
           present: 45  in FES: 18
        Clock is the value returned by the clock() C function (in "ticks").
        Also changed the format of elapsed time display in express mode:
        prints it in seconds as well.

2004-02-11  Andras Varga 

	* cmdenv.cc: propagated semantic change in getNextEvent()'s and
	selectNextModule()'s return value (see include/ChangeLog)

2004-02-05  Andras Varga

	* heap.cc made disabled by default (and has to be explicitly enabled 
	by defining USE_CMDENV_HEAPDEBUG), and changed to throw std::alloc
	on out-of-memory condition.

2004-02-04  ------ omnetpp-3.0pre1 released ------

2004-01-06  Andras Varga

	* cmdenv.h: added isGUI()

2003-12-11  Andras Varga

	* all files: follow changes in sim/; C-style casts replaced with 
	static_cast<>

2003-11-13  Andras Varga

	* Checked in parallel simulation code that was developed March-May 2003,
	during my stay at Monash University. Changes:

	2003-04-18  Andras Varga
	* new ini file option:
	  output-file=<filename>
	If present, output will be redirected to the given file. If the
	[General]/fname-append-host setting is turned on, the the host
	name and pid (process id) will be appended to the file name.