@@ -1,3 +1,7 @@
+2004-07-06  Andras Varga
+
+	* cmdenv.cc: fixed Speedometer usage
+
 2004-06-07  ------ omnetpp-3.0a5 released ------
 
 2004-05-15  ------ omnetpp-3.0a4 released ------
